online-store Volodymyr_Kostiuk JS finished pagination in card

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
@@ -15,7 +15,7 @@
 <body>
 <main>
 
-  <div class="wrapper">
+  <div class="wrap">
     <div class="os-img">
       <img src="./images/Rectangle.png" alt="foto">
     </div>
