--- a/src/components/cards-list/02-js-task/index.html
+++ b/src/components/cards-list/02-js-task/index.html
@@ -10,8 +10,8 @@
   <div id="root"></div>
 
   <script type="module">
-    import Card from '../../card/example/index.js';
-    // import Card from '../../card/02-js-task/index';
+    // import Card from '../../card/example/index.js';
+    import Card from '../../card/02-js-task/index.js';
     import CardsList from './index.js';
     import { products } from '../../../fixtures/products.js'
 
