--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -17,7 +17,11 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 2px 8px gray;
+  list-style: none;
+}
 
+.wrapper {
+  width: 100%;
 }
 
 .siz:hover {
@@ -30,7 +34,8 @@
 }
 
 .pagination {
-  width: 100%;
+  width: 50%;
+  margin: 20px auto;
   background: var(--var-bg-wrapper);
   color: var(--var-color-number);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
@@ -39,6 +44,7 @@
   align-items: center;
   box-sizing: border-box;
   padding: 1rem 1rem 1rem 1rem;
+  border-radius: 0.3rem;
 }
 
 .imgP {
