fix cart-modal, fix pagination, add bug with cart count

--- a/src/Components/Main/Pagination.css
+++ b/src/Components/Main/Pagination.css
@@ -11,13 +11,14 @@
 }
 
 .wrapper-pagination {
-    max-width: 590px;
+    max-width: 630px;
     width: 100%;
     min-height: 40px;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 5px;
 }
 
 ._round-shape {
