--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -17,10 +17,10 @@
 <main>
   <div class="wrapper">
 
-    <img class="card-img"  src="../../components/card/163399632.jpg"alt="Laptop-photo">
+    <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
 
     <div class="card-rating">
-      <div class="card-rating-number">1.23<img src="../../components/card/Star 1 (Stroke).svg"alt="star"/></div>
+      <div class="card-rating-number">1.23<img src="Star 1 (Stroke).svg"alt="star"/></div>
       <div class="card-price">15999</div>
     </div>
     <div class="card-category">
