--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,82 @@
-/* put your styles in this file */
+.wrapper {
+  width: 400px;
+  margin: 100px auto;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+
+
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-flow: column wrap;
+  align-content: space-between;
+}
+
+.card-rating {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 24px;
+  margin-top: 10px;
+}
+
+.card-rating-number {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  border-radius: 3px;
+  width: 70px;
+  height: 27px;
+  text-align: center;
+}
+.card-rating-number img {
+  padding-top: 7px;
+  padding-left: 10px;
+
+}
+
+.card-price {
+  color: #2C2C2C;
+  font-size: 17px;
+}
+
+.card-button {
+  width: 100%;
+}
+
+button {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  width: 100%;
+  margin-top: 22px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 12px;
+  border-radius: 0px 0px 8px 8px;
+  border: 0px;
+
+}
+
+.card-img {
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  padding-top: 12px;
+
+}
+
+.card-category {
+  margin-top: 16px;
+  margin-left: 24px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: #2C2C2C;
+
+}
+
+.laptop {
+  padding-top: 8px;
+  font-size: 9.36px;
+}
