--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,4 +1,3 @@
-
 .card {
   margin: 0 auto;
   width: 317px;
@@ -7,10 +6,14 @@
   border-radius: 8px;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
+
 }
 
 .product_photo {
-  margin: 12px 12px 0;
+  display: flex;
+  padding-top: 12px ;
+
+  margin: 0px auto;
   height: 200px;
 }
 
