--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../../styles/reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../01-css-task/style.css">
+  <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
   <link rel="stylesheet" href="../../../styles/style.min.css">
 
 
@@ -22,7 +23,9 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-      const product = {
+    import Card from './index.js';
+    import Pagination from './pagination.js';
+    const product = {
       "id": "76w0hz7015kkr9kjkav",
       "images": [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
@@ -34,68 +37,22 @@
       "category": "laptops",
       "brand": "acer"
     };
-    class Component {
-      constructor(someProduct) {
-        this.componentProduct = someProduct;
-        this.myRender();
-      }
-      getTemplate (){
-        return `
-        <div class="card">
-          <img class="product_photo" src="${this.componentProduct.images[0]}" alt="Фото товару">
-           <div class="product_content">
-            <span class="bloc_favorite">
-             <span class="counter">${this.componentProduct.rating}</span>
-            <span class="btn_favorite"><i class="bi bi-star"></i></span>
-           </span>
-          <span class="price">${this.componentProduct.price}</span>
-          <div class="description">
-            <h5>${this.componentProduct.title}</h5>
-          </div>
-          <div class="category">
-            <p>${this.componentProduct.category}</p>
-          </div>
-        </div>
-        <button class="btn_addToCart">ADD TO CART</button>
-      </div>
-        `
-      }
-      myRender() {
-        const element = document.createElement('div');
-        element.innerHTML = this.getTemplate();
-        this.componentElement = element;
-      }
-    }
-    const obj = new Component(product);
-    const myRootElement = document.querySelector('#root');
-    myRootElement.append(obj.componentElement);
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    /*  import Card from './solution/index.js';
-    const card = new Card(product);
-    root.append(card.element);*/
-
-
-
+    const monitor = {
+      id: "w73oaydowenkr9kjkav",
+      images: [
+        "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
+      ],
+      title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
+      rating: 5,
+      price: 3800,
+      category: "monitors",
+      brand: "benq"
+    };
+    const card = new Card(monitor);
+    const pagination = new Pagination();
+    const idRoot = document.querySelector('#root');
+    idRoot.append(card.componentElement);
+    idRoot.append(pagination.element);
 
   </script>
 </body>
