--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -14,8 +14,11 @@
 
       <div class="card_container">
 
-        <div class="card_item-photo">
-          <img src="./img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+        <div class="card_item-photo" style="background-image: url(https://content1.rozetka.com.ua/goods/images/big_tile/24790127.jpg);">
+          
+         <!-- <img src="https://content.rozetka.com.ua/goods/images/big_tile/24373314.jpg" 
+               alt="Apple MacBook Pro 13 A2251 Retina 1TB 2020"> -->
+
         </div>
 
         <div class="card_descriptin">
@@ -23,18 +26,18 @@
             <div class="card-item_pr-rt">
 
                 <div class="card_rate">
-                  <span>1.23</span>
+                  <span>1.89</span>
 
                   <i class="bi bi-star"></i>
                 </div>
 
                 <div class="card_price">
-                  15999
+                  70999
                 </div>
             </div>
 
             <h5 class="card_title">
-              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+              Ноутбук Apple MacBook Pro 13" A2251 Retina 1TB 2020 (MWP82) Silver
             </h5>
 
             <p class="card_category">
