--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>Card component</title>
   <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="/src/components/card/01-css-task/style.css">
+  <link rel="stylesheet" href="/src/components/pagination/01-css-task/style.css">
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 800px;
       margin: 100px auto;
     }
   </style>
@@ -17,7 +19,9 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './solution/index.js';
+
+    import Card from './index.js';
+    import Pagination from './pagination.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
@@ -32,9 +36,27 @@
       "brand": "acer"
     };
 
-    const card = new Card(product);
 
-    root.append(card.element);
+    const card = new Card(product);
+    const pagination = new Pagination({
+      activePageIndex: 3
+    });
+
+    const someElement = document.querySelector('#root')
+
+    someElement.append(card.componentElement);
+    someElement.append(pagination.element);
+
+    pagination.setPage(9); // 10
+    pagination.prevPage(); // 9
+    pagination.prevPage(); // 8
+    pagination.prevPage(); // 7
+    pagination.prevPage(); // 6
+    pagination.nextPage(); // 10
+    pagination.nextPage(); // 10
+    pagination.setPage(1)
+
+
   </script>
 </body>
 </html>
