--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
+  <div id="root" class="wrapper">
     <nav class="os-pagination">
       <a href="#" class="page-link previous" data-element="nav-prev">
         <i class="bi bi-chevron-left"></i>
@@ -49,7 +49,13 @@
           <a href="#" data-element="page-link" class="page-link" data-page-index="8">9</a>
         </li>
         <li>
-          <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="8">10</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="8">11</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="9">12</a>
         </li>
       </ul>
 
