--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -18,11 +18,16 @@
 }
 
 .os-pagination .previous {
-  margin-right: 15px
+  margin-right: 15px;
 }
 
+.page-link .previous .next{
+  min-width: 800px;
+}
+
+
 .os-pagination .next {
-  margin-left: 15px
+  margin-left: 15px;
 }
 
 .os-pagination .page-list {
