added logic to pagination-componenet-js

--- a/src/components/pagination/02-js-task/index.html
+++ b/src/components/pagination/02-js-task/index.html
@@ -19,10 +19,7 @@
   <script type="module">
     import Pagination from './index.js';
 
-    const pagination = new Pagination({
-      totalPages: 10,
-      currentPage: 2
-    });
+    const pagination = new Pagination({});
 
     root.append(pagination.element);
 
