--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <title>DoubleSlider component</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap" rel="stylesheet">
+
 
     <style>
         .wrapper {
