--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -20,7 +20,7 @@
     <main>
         <div id="root" class="wrapper">
             <div class="range-slider">
-                <span data-element="from">0</span>
+                <span data-element="from">0 UAH</span>
                 <div class="range-slider-inner" data-element="inner">
                     <span data-element="progress" class="range-slider__progress" style="left: 0%; right: 0%;"></span>
                     <span data-element="thumbLeft" class="range-slider__thumb-left" style="left: 0%;">
@@ -34,7 +34,7 @@
           </svg>
         </span>
                 </div>
-                <span data-element="to">85000</span>
+                <span data-element="to">85000 UAH</span>
             </div>
         </div>
     </main>
