--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -6,77 +6,41 @@
   <link rel="stylesheet" href="../../../styles/style.min.css">
   <link rel="stylesheet" href="../../card/01-css-task/style.css">
 
+  <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
+
 </head>
 
 <body>
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    // import Card from './solution/index.js';
+    import Card from './index.js';
+
+    import Pagination from './pagination.js';
 
     const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
+      id: "76w0hz7015kkr9kjkav",
+      images: [
         "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
         "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
       ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
+      title: "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
+      rating: 2.89,
+      price: 15999,
+      category: "laptops",
+      brand: "acer"
     };
 
-    class Component {
-      constructor(someTitle) {
-        this.componentProduct = someTitle;
-        this.myRender();
-      }
+    const card = new Card(product);
+    const pagination = new Pagination({
+      activePageIndex: 0
+    });
 
-      getTemplate () {
-        return `
-          <div class="product-card d-flex">
+    const someElement = document.querySelector('#root');
 
-            <img class="product-card-laptop" src="${this.componentProduct.images[0]}" alt="laptop">
+    someElement.append(card.componentElement);
+    someElement.append(pagination.element);
 
-            <div class="product-card-wrapper d-flex">
-              <div class="product-card-rating d-flex">
-                <div class="product-card-rating-star d-flex">
-                  <p>${this.componentProduct.rating}</p>
-                  <img src="../images-icons/star-rating.svg" alt="star for rating">
-                </div>
-                <div class="product-card-price">${this.componentProduct.price}</div>
-              </div>
-              <div class="product-card-title">
-                <p>${this.componentProduct.title}</p>
-                <span>${this.componentProduct.category}</span>
-              </div>
-            </div>
-
-            <div class="product-card-footer d-flex">ADD TO CART</div>
-
-          </div>
-        `;
-    }
-      myRender() {
-        const element = document.createElement('div');
-        element.innerHTML = this.getTemplate();
-        this.componentElement = element;
-      }
-    }
-
-    const obj = new Component(product);
-    console.log(obj);
-
-    const myRootElement = document.querySelector('#root');
-    console.log(myRootElement);
-
-    myRootElement.append(obj.componentElement);
-
-
-    // const card = new Card(product);
-    //
-    // root.append(card.element);
   </script>
 </body>
 </html>
