--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,4 +1,4 @@
-.wrapper {
+.product {
   width: 317px;
   margin: 100px auto;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
@@ -7,9 +7,9 @@
 .product-image{
   position: relative;
   display: inline-block;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-image: url(./laptop.svg);
+  text-align: center;
+  width: 293px;
+  height: 200px;
   margin: 12px;
 }
 .rating{
