--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
-.wrapper {
+.wrapper1 {
   margin: 100px auto;
   box-sizing: border-box;
   display: flex;
@@ -48,6 +48,10 @@ li {
   width: 40px;
 }
 .page-link:hover {
+  background: #7e72f2;
+  color: white;
+}
+.page-link.active {
   background: #7e72f2;
   color: white;
 }
