add card and pagination js, small fixes

--- a/src/components/card-list/01-css-task/index.html
+++ b/src/components/card-list/01-css-task/index.html
@@ -27,7 +27,7 @@
               <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
               <div class="product__category">laptops</div>
             </div>
-            <button class="button">ADD TO CART</button>
+            <button class="product__button">ADD TO CART</button>
           </div>
         </div>
 
@@ -45,7 +45,7 @@
               <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
               <div class="product__category">laptops</div>
             </div>
-            <button class="button">ADD TO CART</button>
+            <button class="product__button">ADD TO CART</button>
           </div>
         </div>
 
@@ -63,7 +63,7 @@
               <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
               <div class="product__category">laptops</div>
             </div>
-            <button class="button">ADD TO CART</button>
+            <button class="product__button">ADD TO CART</button>
           </div>
         </div>
 
@@ -81,7 +81,7 @@
               <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
               <div class="product__category">laptops</div>
             </div>
-            <button class="button">ADD TO CART</button>
+            <button class="product__button">ADD TO CART</button>
           </div>
         </div>
 
@@ -99,7 +99,7 @@
               <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
               <div class="product__category">laptops</div>
             </div>
-            <button class="button">ADD TO CART</button>
+            <button class="product__button">ADD TO CART</button>
           </div>
         </div>
       </div>
