--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -30,7 +30,7 @@
         <div class="product__about">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
         <div class="product__category">laptops</div>
       </div>
-      <button class="button">ADD TO CART</button>
+      <button class="product__button">ADD TO CART</button>
     </div>
   </div>
 </main>
