--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -12,13 +12,13 @@
 <body>
   <div class="wrapper">
     <div class="double-slider">
-      <i class="icon-slider-left"></i>
+      <i class="double-slider__icon icon-slider-left"></i>
 
       <div class="double-slider__line"></div>
 
-      <i class="icon-slider-right"></i>
+      <i class="double-slider__icon icon-slider-right"></i>
     </div>
-    <div class="double-slider__price-range">
+    <div class="double-slider__range">
       <span>0 UAH</span>
 
       <span>85000 UAH</span>
