--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -14,13 +14,13 @@
       <h3 class="form-title">Price</h3>
 
       <div class="double-slider">
-        <i class="icon-slider-left"></i>
+        <i class="double-slider__icon icon-slider-left"></i>
 
         <div class="double-slider__line"></div>
 
-        <i class="icon-slider-right"></i>
+        <i class="double-slider__icon icon-slider-right"></i>
       </div>
-      <div class="double-slider__price-range">
+      <div class="double-slider__range">
         <span>0 UAH</span>
 
         <span>85000 UAH</span>
@@ -201,13 +201,13 @@
       <h3 class="form-title">Rating</h3>
 
       <div class="double-slider">
-        <i class="icon-slider-left"></i>
+        <i class="double-slider__icon icon-slider-left"></i>
 
         <div class="double-slider__line"></div>
 
-        <i class="icon-slider-right"></i>
+        <i class="double-slider__icon icon-slider-right"></i>
       </div>
-      <div class="double-slider__price-range">
+      <div class="double-slider__range">
         <span>0</span>
 
         <span>5</span>
