--- a/src/components/card/01-css-task/css/style.css
+++ b/src/components/card/01-css-task/css/style.css
@@ -4,8 +4,9 @@
 }
 
 .product {
-  max-width: 317px;
+  max-width: 315px;
   height: 394px;
+  position: relative;
   padding-top: 12px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
@@ -14,11 +15,12 @@
 .product__image {
   display: block;
   margin: 0 auto;
+  width: 280px;
+  height: 200px;
 }
 
 .product__content {
-  margin-top: 22px;
-  padding: 0 25px 0 24px;
+  padding: 22px 24px;
 }
 
 .product__block-rating-and-price {
@@ -46,30 +48,31 @@
 }
 
 .product__about {
-  margin-top: 18px;
+  margin-top: 16px;
   font-size: 13px;
   line-height: 16px;
 }
 
 .product__category {
-  margin-top: 10px;
+  margin-top: 7px;
   font-size: 10px;
   line-height: 16px;
 }
 
-.button {
+.product__button {
   padding: 15px 115px;
-  margin-top: 17px;
   text-align: center;
+  position: absolute;
+  bottom: 0;
   font-size: 12px;
   background: #7E72F2;
   color: #FFFFFF;
   border-radius: 0px 0px 5px 5px;
   border: none;
+  cursor: pointer;
 }
 
-.button:hover {
+.product__button:hover {
   background: #7467eb;
-  cursor: pointer;
   transition: .4s;
 }
