--- a/src/components/pagination/01-css-task/css/style.css
+++ b/src/components/pagination/01-css-task/css/style.css
@@ -19,8 +19,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 13px;
   border-radius: 50%;
   background: #EDEDED;
+  text-decoration: none;
+  color: #000000;
   cursor: pointer;
   transition: .3s;
 }
