--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -6,41 +6,63 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="../../../fonts.css">
-
   <style>
     .wrapper {
       margin: 100px auto;
     }
   </style>
-
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <div class="pagination">
-        <div class="pagination__page-link">
-          <i class="pagination__back icon-arrow-left"></i>
-        </div>
+    <nav class="pagination">
+      <a href="#" class="pagination__page-link previous" data-element="nav-prev">
+        <i class="pagination__back icon-arrow-left"></i>
+      </a>
 
-        <ul class="pagination__page-list">
-          <li class="pagination__page-link active">1</li>
-          <li class="pagination__page-link">2</li>
-          <li class="pagination__page-link">3</li>
-          <li class="pagination__page-link">4</li>
-          <li class="pagination__page-link">5</li>
-          <li class="pagination__page-link">6</li>
-          <li class="pagination__page-link">7</li>
-          <li class="pagination__page-link">8</li>
-          <li class="pagination__page-link">9</li>
-          <li class="pagination__page-link">10</li>
-          <li class="pagination__page-link">11</li>
-          <li class="pagination__page-link">12</li>
-        </ul>
+      <ul class="pagination__page-list" data-element="pagination">
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link active" data-page-index="0">1</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="1">2</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="2">3</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="3">4</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="4">5</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="5">6</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="6">7</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="7">8</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="8">9</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="9">10</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="10">11</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="pagination__page-link" data-page-index="11">12</a>
+        </li>
+      </ul>
 
-        <div class="pagination__page-link">
-          <i class="pagination__forward icon-arrow-right"></i>
-        </div>
-    </div>
+      <a href="#" class="pagination__page-link next" data-element="nav-next">
+        <i class="pagination__forward icon-arrow-right"></i>
+      </a>
+    </nav>
   </div>
 </main>
 </body>
