--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,48 @@
-/* put your styles in this file */
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.wrapper {
+  margin: 100px auto;
+}
+
+.m-b-10 {
+  margin-bottom: 10px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.filters-list-container {
+  width: 280px;
+  padding: 20px;
+  background: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
+}
+
+p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+input[type="checkbox"] {
+  width: 20px;
+  height: 17px;
+  accent-color: #7E72F2;
+}
+
+label {
+  font-size: 14px;
+}
+
+.checkbox {
+  margin: 0 12px 0 0;
+}
+
+.filter-category-bottom-line, .filter-brand-bottom-line {
+  margin: 30px 0 24px;
+  border-bottom: 1px solid #D6D6D6;
+}
