--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap">
 </head>
 <body>
 <main>
   <div id="root">
-    <!-- Cart component -->
+    <div class="Cart-wrapper">
+      <div class="Cart-component">
+        <div class="Cart-img" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);">
+          <div class="Cart-product-name"> Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+        </div>
+        <div class="Cart-count"> <a href="" class="Cart-minus"><i class="bi bi-dash-circle"></a></i>1 <a href="" class="Cart-plus"><i class="bi bi-plus-circle"></i></a></div>
+        <div class="Cart-price">17999</div>
+      </div>
+
+    </div>
+    <div class="Cart-total">Total:49999</div>
+    <div class="Cart-order-button"> ORDER </div>
+
   </div>
 </main>
 </body>
