--- a/src/components/card(done)/01-css-task/style-card.css
+++ b/src/components/card(done)/01-css-task/style-card.css
@@ -1,25 +1,24 @@
 body{
   background-color:#FFFFFF;
 }
-.wrapper{
+.Card-wrapper{
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
-  width: 400px;
-  height: 430px;
-  margin: 100px auto;
+  width: 317px;
+  height: 394px;
+  margin: 0 auto;
   background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
 }
-.wrapper-img img{
+.Card-wrapper-img {
   padding: 12px;
   box-sizing: border-box;
   display: flex;
-  margin: 0 auto;
   flex-direction: column;
   align-items: center;
-  width: 393px;
-  height: 250px;
 }
-.wrapper-rate{
+.Card-wrapper-rate{
   font-family: 'Montserrat';
   color:#FFFFFF;
   background-color:#7E72F2;
@@ -31,25 +30,30 @@ body{
   justify-content: space-around;
   align-items: center;
 }
-.wrapper-price{
+.Card-wrapper-price{
   display: flex;
   justify-content: flex-end;
   padding: 5px;
   margin-right: 27.45px;
 }
-.wrapper-price-rate{
+.Card-wrapper-price-rate{
   display: flex;
   justify-content: space-between;
 }
-.wrapper-discription{
-font-size: 19.5px;
+.Card-wrapper-discription{
+  font-size: 15.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2C2C2C;
   margin-left: 24px;
   margin-top: 18.92px;
 }
-.wrapper-laptops{
+.Card-wrapper-laptops{
+  display: flex;
   margin-left: 24px; ;
 }
-.wrapper-add-to-card{
+.Card-wrapper-add-to-card{
 display: flex;
 justify-content: center;
 font-family: 'Montserrat';
@@ -59,4 +63,5 @@ padding: 10px;
 border-bottom-left-radius: 8px;
 border-bottom-right-radius: 8px;
 }
+
 
