--- a/src/components/card(done)/02-js-task/style-pagination.css
+++ b/src/components/card(done)/02-js-task/style-pagination.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 
-.wrapper {
+.Pagination-wrapper {
   width: 790px;
   height: 205px;
   margin: 100px auto;
@@ -27,7 +27,7 @@
   display: flex;
   border: none;
 }
-.chevron-style{
+.Pagination-chevron-style{
   padding: unset;
   border-radius: 50%;
   border: none;
@@ -35,7 +35,7 @@
 
 
 
-.Buttons{
+.Pagination-Buttons{
   width: 40px;
   height: 40px;
   border: none;
@@ -44,26 +44,17 @@
   padding:unset;
   margin-right: -4px;
 }
-.Active {
+.Pagination-Active {
   background-color: #7E72F2;
   color: #fff;
 }
-.Border-off{
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.Buttons:hover{
+
+.Pagination-Buttons:hover{
   color: #fff;
   transition: 0.7s;
   cursor: pointer;
   background-color: #7E72F2;
 
-}
-.Border-off:hover{
-  color: #fff;
-  background-color: #7E72F2;
 }
 
 .bi-chevron-left:hover{
@@ -75,7 +66,7 @@
   transition: 0.7s;
 }
 
-.chevron-style:hover{
+.Pagination-chevron-style:hover{
   color: #fff;
   transition: 0.7s;
   cursor: pointer;
