--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,200 @@
-/* put your styles in this file */
+.container {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+}
+
+.left-side{
+  height: 100%;
+  width: calc(100% / 12 * 3);
+  border-right: 1px solid red ;
+}
+
+.right-side{
+  width: calc(100% / 12 * 9);
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+}
+
+div[class^='col-'] {
+
+  outline: 1px solid red;
+  background: lightgray;
+  text-align: left;
+  padding: 10px 20px 10px 20px;
+}
+
+.col-1 {
+  width: calc(100% / 12);
+}
+
+.col-2 {
+  width: calc(100% / 12 * 2);
+}
+
+.col-3 {
+  width: calc(100% / 12 * 3);
+}
+
+.col-4 {
+  width: calc(100% / 12 * 4);
+}
+
+.col-5 {
+  width: calc(100% / 12 * 5);
+}
+
+.col-6 {
+  width: calc(100% / 12 * 6);
+}
+
+.col-7 {
+  width: calc(100% / 12 * 7);
+}
+
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
+.col-9 {
+  width: calc(100% / 12 * 9);
+}
+
+.col-10 {
+  width: calc(100% / 12 * 10);
+}
+
+.col-11 {
+  width: calc(100% / 12 * 11);
+}
+
+.col-12 {
+  width: calc(100% / 12 * 12);
+}
+
+
+/* s */
+@media (min-width: 1px){
+  .col-s {
+    width: calc(100% / 12 * 12);
+  }
+  .right-side{
+    width: 100%;
+  }
+  .left-side{
+    display: none;
+  }
+}
+/* m */
+@media (min-width: 576px) {
+  .col-m {
+    width: calc(100% / 12 * 6);
+  }
+  .left-side{
+    display: flex;
+  }
+}
+/* l */
+@media (min-width: 768px) {
+  .col-l {
+    width: calc(100% / 12 * 4);
+  }
+  .left-side{
+    display: flex;
+  }
+}
+/* xl */
+@media (min-width: 992px) {
+  .col-xl {
+    width: calc(100% / 12 * 4);
+  }
+  .left-side{
+    display: flex;
+  }
+}
+/* xxl */
+@media (min-width: 1200px) {
+  .col-xxl {
+    width: calc(100% / 12 * 3);
+  }
+  .left-side{
+    display: flex;
+  }
+}
+/*end-of-grid-layout */
+
+
+
+/*start-of-card-list*/
+body{
+  background-color:#FFFFFF;
+}
+.wrapper{
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  box-sizing: border-box;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+}
+ svg{
+  box-sizing: border-box;
+
+}
+.wrapper-img {
+  padding: 12px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrapper-rate{
+  font-family: 'Montserrat';
+  color:#FFFFFF;
+  background-color:#7E72F2;
+  border-radius: 8px;
+  margin-left: 24px;
+  width: 70px;
+  height: 27px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.wrapper-price{
+  display: flex;
+  justify-content: flex-end;
+  padding: 5px;
+  margin-right: 27.45px;
+}
+.wrapper-price-rate{
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper-discription{
+  font-size: 15.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2C2C2C;
+  margin-left: 24px;
+  margin-top: 18.92px;
+}
+.wrapper-laptops{
+  display: flex;
+  margin-left: 24px; ;
+}
+.wrapper-add-to-card{
+display: flex;
+justify-content: center;
+font-family: 'Montserrat';
+color:#FFFFFF;
+background-color:#7E72F2;
+padding: 10px;
+border-bottom-left-radius: 8px;
+border-bottom-right-radius: 8px;
+}
+
+
+
+
