Made a search-box component (css-task).

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -12,17 +12,22 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
+
   </style>
 </head>
 <body>
 <main>
+
   <div class="wrapper">
-    <!-- SearchBox component -->
+
+    <div class="search-box">
+      <label for="search"></label>
+      <input type="text" id="search" placeholder="Search">
+      <img src="../icon/search-icon.svg" alt="search">
+    </div>
+
   </div>
+
 </main>
 </body>
 </html>
