--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -32,10 +32,12 @@ input[type="checkbox"] {
   width: 20px;
   height: 17px;
   accent-color: #7E72F2;
+  cursor: pointer;
 }
 
 label {
   font-size: 14px;
+  cursor: pointer;
 }
 
 .checkbox {
