--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,38 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.wrapper {
+  margin: 100px auto;
+}
+
+.search-box {
+  width: 990px;
+  height: 45px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 20px;
+  background: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  cursor: text;
+}
+
+input {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+
+img {
+  width: 16px;
+  height: 16px;
+}
+
+::placeholder {
+  color: #626262;
+  font-size: 16px;
+}
