added js task for pagination and card

--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -23,6 +23,10 @@ a {
   --wite: #FFFFFF;
 }
 
+.wrapper {
+  /* margin: 100px auto; */
+}
+
 .card-component-box {
   width: 317px;
   height: 394px;
