--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -9,6 +9,7 @@
     .wrapper {
       width: 400px;
       margin: 100px auto;
+      display: flex;
     }
   </style>
 </head>
@@ -16,6 +17,17 @@
 <main>
   <div class="wrapper">
     <!-- DoubleSlider component -->
+    <div class = 'range-slider'>
+      <span>0 UAH</span>
+      <div>
+        <span class = 'slider-thumb-left'></span>
+        <span class = 'slider-line'></span>
+
+      </div>
+      <span>85000 UAH</span>
+
+    </div>
+
   </div>
 </main>
 </body>
