--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -11,10 +11,16 @@ a {
   --wite: #FFFFFF;
 }
 
+
+.wrapper {
+  margin: 100px auto;
+}
+
 .pagination {
- display: flex;
- justify-content: center;
- align-items: center;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pages-list {
