--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+  <link rel="stylesheet" href="../01-css-task/style.css">
+  <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 800px;
       margin: 100px auto;
     }
   </style>
@@ -17,7 +21,45 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
+    // import Card from './index.js';
+
+    // const product = {
+    // "id": "76w0hz7015kkr9kjkav",
+    // "images": [
+    //   "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
+    //   "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
+    // ],
+    // "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
+    // "rating": 2.89,
+    // "price": 15999,
+    // "category": "laptops",
+    // "brand": "acer"
+    // };
+
+    // const monitor = {
+    //   id: "w73oaydowenkr9kjkav",
+    //   images: [
+    //   "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
+    //   ],
+    //   title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
+    //   rating: 5,
+    //   price: 3800,
+    //   category: "monitors",
+    //   brand: "benq"
+    // };
+
+    // const card = new Card(product);
+
+    // root.append(card.componentElement);
+
+
+
+
+
+
+
     import Card from './index.js';
+    import Pagination from './pagination.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
@@ -32,9 +74,28 @@
       "brand": "acer"
     };
 
-    const card = new Card(product);
+    const monitor = {
+        id: "w73oaydowenkr9kjkav",
+        images: [
+        "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
+        ],
+        title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
+        rating: 5,
+        price: 3800,
+        category: "monitors",
+        brand: "benq"
+    };
 
-    root.append(card.element);
+    const card = new Card(product);
+    const pagination = new Pagination({
+      activePageIndex: 3,
+    });
+
+    const someElement = document.querySelector('#root')
+
+    someElement.append(card.componentELement);
+    someElement.append(pagination.element);
+
   </script>
 </body>
 </html>
