--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -18,7 +18,7 @@
   <div class="wrapper">
       <!-- Pagination component -->
     <nav class="pagination">
-        <a href="#" data-element="prev-next" class="prev-page pages">
+        <a href="#" data-element="nav-prev" class="prev-page pages">
           <i class="bi bi-chevron-left"></i>
         </a>
         <ul class="pages-list">
